ingress.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    ingress: plain
  name: pipelinemanager
  namespace: kathra-dev
  selfLink: /apis/extensions/v1beta1/namespaces/kathra-dev/ingresses/codegen
spec:
  rules:
  - host: pipelinemanager.kathra-dev.irtsystemx.org
    http:
      paths:
      - backend:
          serviceName: pipelinemanager
          servicePort: 80
status:
  loadBalancer: {}
